--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-spring": "^8.0.18"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
