POST: 011-freivalds-algorithm and ADD: katex, gatsby-remark-katex for render math typesetting

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "gatsby-plugin-sharp": "^2.0.34",
     "gatsby-remark-emoji": "0.0.2",
     "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-katex": "^3.0.4",
     "gatsby-remark-prismjs": "^3.2.6",
     "gatsby-source-filesystem": "^2.0.24",
-    "gatsby-transformer-remark": "^2.3.2",
+    "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.17",
+    "katex": "^0.10.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "prismjs": "^1.16.0",
