--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.0.9",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.34",
+    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-emoji": "0.0.2",
     "gatsby-remark-images": "^3.0.10",
     "gatsby-remark-katex": "^3.0.4",
@@ -29,7 +30,10 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
